# trackwinner.lol

./: METHODOLOGY.md  README.md  SETUP.md
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  context.md  main.py  pyproject.toml
backend/plan/: preparation-pipeline-spec.md
backend/src/: pipeline.py  store.py
backend/src/roi/: .acv_cache.json  .classifier_cache.json  .contact_cache.json  .pricing_cache.json  .research_cache.json  .volume_cache.json  config.py  models.py  router.py
backend/src/roi/clients/: gemini.py  peec.py  pioneer.py  tavily.py
backend/src/roi/pipeline/: step10_upside.py  step11_actions.py  step12_synthesize.py  step1_5_volume.py  step1_setup.py  step2_brands.py  step3_chats.py  step4_market.py  step5_action.py  step6_position.py  step7_conversion.py  step9_revenue.py
backend/src/roi/prep/: _cache.py  acv.py  classifier.py  contact.py  impact.py  pipeline.py  pricing.py  schemas.py
backend/tools/: gemini.py  gradium.py  tavily.py  telli.py
frontend/: .gitignore  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json  tailwind.config.ts
frontend/Data/: Mock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyse/: page.tsx
frontend/app/api/roi/full-analysis/: route.ts
frontend/app/auswertung/: page.tsx
frontend/app/content-plan/: page.tsx
frontend/app/home/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: BrandMark.tsx  Navbar.tsx
frontend/lib/: paidMedia.ts  peec.ts
